--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <title>Rock Paper Scissors</title>
-    <link rel="stylesheet" href="style.css"/>
+    <link rel="stylesheet" href="assets/style.css"/>
     <script src="https://www.gstatic.com/firebasejs/7.5.0/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/7.5.0/firebase-auth.js"></script>
     <script src="https://www.gstatic.com/firebasejs/7.5.0/firebase-database.js"></script>
@@ -26,14 +26,14 @@
       <input type="button" id="submit" value="Submit!"> </br>
       </div>
       <div id="image-container"> 
-        <img class="choice-image" src="image/rock.png" data-item="rock" width="100px" height="100px"/>
-        <img class="choice-image" src="image/paper.png" data-item="paper" width="100px" height="100px"/>
-        <img class="choice-image" src="image/scissors.png" data-item="scissors" width="100px" height="100px"/>
+        <img class="choice-image" src="assets/image/rock.png" data-item="rock" width="100px" height="100px"/>
+        <img class="choice-image" src="assets/image/paper.png" data-item="paper" width="100px" height="100px"/>
+        <img class="choice-image" src="assets/image/scissors.png" data-item="scissors" width="100px" height="100px"/>
       </div>
     </section>
 
     <!-- Javascript part-->
-    <script src="game.js"></script>
+    <script src="assets/game.js"></script>
 
   
   </body>
