--- a/index.html
+++ b/index.html
@@ -5,29 +5,31 @@
   <meta charset="UTF-8" />
   <title>Rock Paper Scissors</title>
   <link rel="stylesheet" href="assets/style.css" />
+  <link href="https://fonts.googleapis.com/css?family=Alatsi|Lilita+One|Montserrat&display=swap" rel="stylesheet">
 </head>
 
 <body>
 
   <!-- Game interface section -->
 
-  <div id="game-container">
+  <div id="start-container">
     <div id="form-container">
-      <h1>Welcome to the Rock, Papper and Scissors Game!</h1>
+      <h1>Welcome to the Rock, Paper and Scissors Game!</h1>
       <div id="form">
-        <label for="nickname">Enter your nickname and play!</label>
-        <input type="text" id="nickname">
-        <input type="button" id="submit" value="Submit!"> </br>
+        <label for="nickname">Enter your nickname and play!</label> 
+        <input id="nickname" type="text">
+        <input type="button" id="submit" value="Submit!">
       </div>
     </div>
-    <div id="user-interaction"></div>
-    <div id="image-container">
-      <img class="choice-image" src="assets/image/rock.png" data-item="rock" width="100px" height="100px" />
-      <img class="choice-image" src="assets/image/paper.png" data-item="paper" width="100px" height="100px" />
-      <img class="choice-image" src="assets/image/scissors.png" data-item="scissors" width="100px" height="100px" />
+    <div id="game-container">
+      <div id="user-interaction"></div>
+      <div id="image-container">
+        <img class="choice-image" src="assets/image/paper.png" data-item="paper"  />
+        <img class="choice-image" src="assets/image/rock.png" data-item="rock"  />
+        <img class="choice-image" src="assets/image/scissors.png" data-item="scissors"  />
+      </div>
     </div>
   </div>
-
 
   <!-- Javascript part-->
 
@@ -36,6 +38,7 @@
   <script src="https://www.gstatic.com/firebasejs/7.5.0/firebase-database.js"></script>
   <script src="https://www.gstatic.com/firebasejs/7.5.0/firebase-firestore.js"></script>
   <script src="https://code.jquery.com/jquery.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
   <script src="assets/game.js"></script>
 
 </body>
