first attempt to add chat

--- a/index.html
+++ b/index.html
@@ -5,29 +5,36 @@
   <meta charset="UTF-8" />
   <title>Rock Paper Scissors</title>
   <link rel="stylesheet" href="assets/style.css" />
-  <link href="https://fonts.googleapis.com/css?family=Alatsi|Lilita+One|Montserrat&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Alatsi|Lakki+Reddy|Lilita+One|Montserrat&display=swap"
+    rel="stylesheet">
 </head>
 
 <body>
 
-  <!-- Game interface section -->
+  <!-- Game section -->
 
   <div id="start-container">
     <div id="form-container">
       <h1>Welcome to the Rock, Paper and Scissors Game!</h1>
       <div id="form">
-        <label for="nickname">Enter your nickname and play!</label> 
+        <label for="nickname">Enter your nickname and play!</label>
         <input id="nickname" type="text">
         <input type="button" id="submit" value="Submit!">
       </div>
     </div>
     <div id="game-container">
       <div id="user-interaction"></div>
+      <input type="button" id="restart" value="Another round!">
       <div id="image-container">
-        <img class="choice-image" src="assets/image/paper.png" data-item="paper"  />
-        <img class="choice-image" src="assets/image/rock.png" data-item="rock"  />
-        <img class="choice-image" src="assets/image/scissors.png" data-item="scissors"  />
+        <img class="choice-image" src="assets/image/paper.png" data-item="paper" />
+        <img class="choice-image" src="assets/image/rock.png" data-item="rock" />
+        <img class="choice-image" src="assets/image/scissors.png" data-item="scissors" />
       </div>
+    </div>
+    <div id="chat-container">
+      <p id="chat-section"></p>
+      <input id="chat" type="text">
+      <input type="button" id="chat-button" value="Chat!">
     </div>
   </div>
 
