--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
   <meta charset="UTF-8" />
   <title>Rock Paper Scissors</title>
   <link rel="stylesheet" href="assets/style.css" />
-  <link href="https://fonts.googleapis.com/css?family=Alatsi|Lakki+Reddy|Lilita+One|Montserrat&display=swap"
-    rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Girassol|Inria+Serif&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Girassol&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -18,7 +18,7 @@
       <h1>Welcome to the Rock, Paper and Scissors Game!</h1>
       <div id="form">
         <label for="nickname">Enter your nickname and play!</label>
-        <input id="nickname" type="text">
+        <input id="nickname" type="text" value="">
         <input type="button" id="submit" value="Submit!">
       </div>
     </div>
@@ -34,7 +34,7 @@
     <div id="chat-container">
       <p id="chat-section"></p>
       <input id="chat" type="text">
-      <input type="button" id="chat-button" value="Chat!">
+      <input type="button" id="chat-button" value="Send!">
     </div>
   </div>
 
