--- a/index.html
+++ b/index.html
@@ -5,30 +5,31 @@
   <meta charset="UTF-8" />
   <title>Rock Paper Scissors</title>
   <link rel="stylesheet" href="assets/style.css" />
-  <link href="https://fonts.googleapis.com/css?family=Girassol|Inria+Serif&display=swap" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css?family=Girassol&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Libre+Baskerville|Noto+Serif&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Abril+Fatface|Dosis|Permanent+Marker|Righteous&display=swap" rel="stylesheet">
 </head>
 
 <body>
 
   <!-- Game section -->
+  
   <div id="start-container">
     <div id="form-container">
       <h1>Welcome to the Rock, Paper and Scissors Game!</h1>
       <div id="form">
         <label for="nickname">Enter your nickname and play!</label>
         <input id="nickname" type="text" value="">
-        <input type="button" id="submit" value="Submit!">
+        <input type="button" id="submit" value="Submit">
       </div>
     </div>
   </div>
   <div id="game-chat-container">
     <div id="chat-container">
-      <p id="chat-section"></p>
       <div id="chat-input-bitton-container">
         <input id="chat-input" type="text">
         <input type="button" id="chat-button" value="send">
       </div>
+      <p id="chat-section"></p>
     </div>
     <div id="game-container">
       <div id="user-interaction"></div>
@@ -39,7 +40,11 @@
       </div>
       <input type="button" id="restart" value="Another round">
     </div>
-    <div id="user-score"></div>
+    <div>
+      <div id="user-score">
+        <div id="score"></div>
+      </div>
+    </div>
   </div>
 
   <!-- Javascript part-->
